# evovita

./: CMakeLists.txt
src/: board.cpp  board.hpp  individual.cpp  individual.hpp  main.cpp  utils.cpp  utils.hpp  vector.cpp  vector.hpp
